spacing issues for studio courses page

--- a/sites/all/themes/s2015/sass/s2015.hacks.scss
+++ b/sites/all/themes/s2015/sass/s2015.hacks.scss
@@ -225,3 +225,9 @@ body {
         border:none !important; 
    }
 }
+
+.sessions-events.studio-courses {
+    .imported-content-p {
+        margin-top:0; 
+    }
+}
